2022-11-02T16:25:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3379317359 # 577
* notice: last 14d: unq all: 9 37
* notice: prev accum: outdated-unq outdated-all / unq all: 227 415 / 249 451
* notice: next accum: outdated-unq outdated-all / unq all: 227 415 / 250 452
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-02]

2022-11-02T08:22:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3375909947 # 576
* notice: last 14d: unq all: 9 36
* notice: prev accum: outdated-unq outdated-all / unq all: 227 415 / 249 452
* notice: next accum: outdated-unq outdated-all / unq all: 227 415 / 249 451
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-19]

2022-11-02T01:47:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3374237621 # 575
* notice: last 14d: unq all: 9 37
* notice: prev accum: outdated-unq outdated-all / unq all: 227 415 / 249 451
* notice: next accum: outdated-unq outdated-all / unq all: 227 415 / 249 452
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-01]

2022-11-01T08:22:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3367917169 # 573
* notice: last 14d: unq all: 9 36
* notice: prev accum: outdated-unq outdated-all / unq all: 227 415 / 248 450
* notice: next accum: outdated-unq outdated-all / unq all: 227 415 / 249 451
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-01]

2022-11-01T01:55:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3366172605 # 572