@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-02T16:25:39Z",
-  "count_outdated" : 415,
-  "uniques_outdated" : 227,
-  "count" : 452,
+  "timestamp" : "2022-11-03T01:26:37Z",
+  "count_outdated" : 417,
+  "uniques_outdated" : 228,
+  "count" : 453,
   "uniques" : 250,
   "clones" : [
-    {
-      "timestamp": "2022-10-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-20T00:00:00Z",
       "count": 2,
