@@ -1,3 +1,11 @@
+2022-11-03T01:26:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3382351848 # 578
+* notice: last 14d: unq all: 9 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 227 415 / 250 452
+* notice: next accum: outdated-unq outdated-all / unq all: 228 417 / 250 453
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-19] / []
+
 2022-11-02T16:25:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3379317359 # 577
 * notice: last 14d: unq all: 9 37
